--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.7.0",
     "react-desktop": "^0.3.7",
     "react-dom": "^16.7.0",
+    "react-draggable": "^3.3.0",
     "socket.io-client": "^2.2.0",
     "store": "^2.0.12"
   },
