--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "ant": "^0.2.0",
     "antd": "^3.13.0",
     "duix": "^1.0.5",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-desktop": "^0.3.7",
     "react-dom": "^16.7.0",
     "react-draggable": "^3.3.0",
-    "regenerator-runtime": "^0.13.2",
+    "react-infinite-scroller": "^1.2.4",
     "socket.io-client": "^2.2.0",
     "store": "^2.0.12"
   },
@@ -25,5 +25,8 @@
     "o-grid": "./lib/grid.jsx",
     "o-mediaquery": "./lib/mediaquery.jsx",
     "o-constants": "./lib/constants.jsx"
+  },
+  "devDependencies": {
+    "regenerator-runtime": "^0.13.2"
   }
 }
